# Hedro-Training-2024.1

./: .eslintrc.json  .gitignore  Makefile  README.md  docker-compose.yaml  package.json  tsconfig.json
aws-timestream/: Cargo.toml
aws-timestream/src/: main.rs
device-simulator/: .env  package-lock.json
device-simulator/src/infra/: humidityRandomGenerator.ts  messaging.ts
device-simulator/src/services/: humidity.ts  interfaces.ts  temp.ts
grpc/: .env  Cargo.toml  Dockerfile
grpc/protos/: server.proto
grpc/src/: main.rs
grpc/src/infra/: aws_timestream.rs  mod.rs
grpc/src/services/: data_services.rs  mod.rs
rmq-bridge/: .env  Cargo.toml  Dockerfile
rmq-bridge/src/: main.rs
rmq-bridge/src/infra/: mod.rs  mqtt_messaging.rs  rmq_messaging.rs
rmq-bridge/src/services/: service.rs
rmq-consumer/: .env  Cargo.toml  Dockerfile
rmq-consumer/src/: main.rs
rmq-consumer/src/infra/: aws_timestream.rs  mod.rs  rmq_messaging.rs
rmq-consumer/src/services/: mod.rs  service.rs
src/: main.ts
src/infra/: humidityRandomGenerator.ts  tempRandomGenerator.ts
src/services/: temp.ts
