[package]
name = "grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.11.0"
prost = "0.12.3"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
aws-config = { version = "1.1.5", features = ["behavior-version-latest"] }
aws-sdk-timestreamquery = { version = "1.13.0" }
log = { version = "0.4.20" }
serde_json = { version = "1.0.113" }
dotenvy = { version = "0.15.7" }
env_logger = { version = "0.11.0" }

[build-dependencies]
tonic-build = { version = "0.11.0" }
